--- a/testProject/package.json
+++ b/testProject/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^6.0.0-rc.1",
     "@angular/router": "^6.0.0-rc.1",
     "body-parser": "^1.18.3",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "express": "^4.16.4",
     "mongoose": "^5.3.16",
